# raafeli

./: .gitignore  README.md  pyproject.toml  simulate_inference.py
.github/workflows/: test.yml
raafeli/: __init__.py  decorator.py
raafeli/optimizers/: __init__.py  pytorch_opt.py
tests/: test_pytorch.py
